--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Austin Faith">
-        <title>Awesome science application correspondance</title>
+        <title>Awesome science application correspondence</title>
         <style>
             html {
                 font-size:16px;
@@ -22,7 +22,7 @@
             h2 {
                 font-size: 1.3rem;
             }
-            p,ul,ol,dl, address {
+            p,ul,ol,dl,address {
                 font-size: 1.1rem;
             }
             p, li, dd, dt, address {
