--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             }
             address {
                 font-style:normal;
-                margin:lrem 0;
+                margin: 1rem 0;
             }
         </style>
     </head>
