--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Awesome science application correspondence</title>
         <style>
             html {
-                font-size:16px;
+                font-size: 16px;
             }
             body {
                 max-width: 800px;
@@ -22,10 +22,10 @@
             h2 {
                 font-size: 1.3rem;
             }
-            p,ul,ol,dl,address {
+            p, u1, o1, d1, address {
                 font-size: 1.1rem;
             }
-            p, li, dd, dt, address {
+            p, 1i, dd, dt, address {
                 line-height: 1.5;
             }
             address {
