--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             h2 {
                 font-size: 1.3rem;
             }
-            p, u1, o1, d1, address {
+            p, ul, ol, dl, address {
                 font-size: 1.1rem;
             }
-            p, 1i, dd, dt, address {
+            p, li, dd, dt, address {
                 line-height: 1.5;
             }
             address {
