--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </style>
     </head>
     <body>
-        Dr. Eleanor Gaye
+        <p>Dr. Eleanor Gaye
 Awesome Science faculty
 University of Awesome
 Bobtown, CA 99999,
@@ -43,12 +43,12 @@ USA
 Tel: 123-456-7890
 Email: no_reply@example.com
 
-20 January 2016
+            20 January 2016</p>
 
-Miss Eileen Dover
+<p>Miss Eileen Dover
 4321 Cliff Top Edge
 Dover, CT9 XXX
-UK
+    UK</p>
 
 
         <h1>Re: Eileen Dover university application</h1>
@@ -61,9 +61,11 @@ Thank you for your recent application to join us at the University of Awesome's 
 
 We are happy to accommodate you starting your study with us at any time, however it would suit us better if you could start at the beginning of a semester; the start dates for each one are as follows:
 
-First semester: 9 September 2016
-Second semester: 15 January 2017
-Third semester: 2 May 2017
+<ul>
+    <li>First semester: 9 September 2016</li>
+    <li>Second semester: 15 January 2017</li>
+    <li>Third semester: 2 May 2017</li>
+</ul>
 
 Please let me know if this is ok, and if so which start date you would prefer.
 
