--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
         </style>
     </head>
     <body>
-        <p>Dr. Eleanor Gaye
-Awesome Science faculty
-University of Awesome
-Bobtown, CA 99999,
-USA
+        <p>Dr. Eleanor Gaye</p>
+        <p>Awesome Science faculty</p>
+        <p>University of Awesome</p>
+        <p>Bobtown, CA 99999,</p>
+        <p>USA</p>
 Tel: 123-456-7890
 Email: no_reply@example.com
 
-            20 January 2016</p>
+            20 January 2016
 
 <p>Miss Eileen Dover
 4321 Cliff Top Edge
