--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </style>
     </head>
     <body>
-        <p>Dr. Eleanor Gaye</p>
+        <p><strong>Dr. Eleanor Gaye</strong></p>
         <p>Awesome Science faculty</p>
         <p>University of Awesome</p>
         <p>Bobtown, CA 99999,</p>
