--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
         <p>University of Awesome</p>
         <p>Bobtown, CA 99999,</p>
         <p>USA</p>
-Tel: 123-456-7890
-Email: no_reply@example.com
+        <p>Tel: 123-456-7890</p>
+        <p>Email: no_reply@example.com</p>
 
-            20 January 2016
+        <p>20 January 2016</p>
 
-<p>Miss Eileen Dover
-4321 Cliff Top Edge
-Dover, CT9 XXX
-    UK</p>
+        <p>Miss Eileen Dover</p>
+        <p>4321 Cliff Top Edge</p>
+        <p>Dover, CT9 XXX</p>
+    <p>UK</p>
 
 
         <h1>Re: Eileen Dover university application</h1>
