--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <p>University of Awesome</p>
         <p>Bobtown, CA 99999,</p>
         <p>USA</p>
-        <p>Tel: 123-456-7890</p>
-        <p>Email: no_reply@example.com</p>
+        <p><strong>Tel:</strong> 123-456-7890</p>
+        <p><strong>Email:</strong> no_reply@example.com</p>
 
         <p>20 January 2016</p>
 
