--- a/index.html
+++ b/index.html
@@ -35,17 +35,21 @@
         </style>
     </head>
     <body>
-        <p><strong>Dr. Eleanor Gaye</strong></p>
-        <p>Awesome Science faculty</p>
-        <p>University of Awesome</p>
-        <p>Bobtown, CA 99999,</p>
-        <p>USA</p>
-        <p><strong>Tel:</strong> 123-456-7890</p>
-        <p><strong>Email:</strong> no_reply@example.com</p>
+        <address>
+        <p>    
+        <strong>Dr. Eleanor Gaye</strong><br>
+        Awesome Science faculty<br>
+        University of Awesome<br>
+        Bobtown, CA 99999,<br>
+        USA
+        <strong>Tel</strong>: 123-456-7890
+        <strong>Email</strong>: no_reply@example.com
 
-        <p>20 January 2016</p>
-
-        <p>Miss Eileen Dover</p>
+        20 January 2016
+        </p>
+        </address>    
+            
+        <p><strong>Miss Eileen Dover</strong></p>
         <p>4321 Cliff Top Edge</p>
         <p>Dover, CT9 XXX</p>
     <p>UK</p>
