--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         Awesome Science faculty<br>
         University of Awesome<br>
         Bobtown, CA 99999,<br>
-        USA
-        <strong>Tel</strong>: 123-456-7890
-        <strong>Email</strong>: no_reply@example.com
+        USA<br>
+        <strong>Tel</strong>: 123-456-7890<br>
+        <strong>Email</strong>: no_reply@example.com<br>
 
         20 January 2016
         </p>
