--- a/index.html
+++ b/index.html
@@ -48,12 +48,16 @@
         20 January 2016
         </p>
         </address>    
+         
+        <address>
+        <p>
+        <strong>Miss Eileen Dover</strong><br>
+        4321 Cliff Top Edge<br>
+        Dover, CT9 XXX<br>
+        UK<br>
             
-        <p><strong>Miss Eileen Dover</strong></p>
-        <p>4321 Cliff Top Edge</p>
-        <p>Dover, CT9 XXX</p>
-    <p>UK</p>
-
+        </p>
+        </address>
 
         <h1>Re: Eileen Dover university application</h1>
 
