--- a/index.html
+++ b/index.html
@@ -105,9 +105,8 @@ So please can you provide more information on each of these subjects, including 
         <p>Arctic robot dance</p>
         <p>An interesting example of historic misinformation, English explorers in the 1960s believed to have discovered a new dance style characterized by "robotic", stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.</p>  
 
-        <a  href="" target="_blank">
-           <p>For more of my research, see my exotic dance research page.
-        
+         <p>For more of my research, see my <a  href="" target="_blank">exotic dance research page.
+    
         </a>
 
         <p>Yours sincerely,</p>
