--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -97,23 +97,16 @@ So please can you provide more information on each of these subjects, including 
 
         <p>Yes, you are right! As part of my post-doctorate work, I did study exotic tribal dances. To answer your question, my favourite dances are as follows, with definitions:</p>
 
-        <p>Polynesian chicken dance</p>
-        <p>A little known but very influential dance dating back as far as 300BC, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".</p>
+        <dl>
+        <dt>Polynesian chicken dance</dt>
+        <dd>A little known but very influential dance dating back as far as 300BC, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".</dd>
         <p>Icelandic brownian shuffle</p>
         <p>Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in imperceptibly tiny, very rapid movements. One of my fellow students used to say that he thought this dance inspired modern styles such as Twerking.</p>
         <p>Arctic robot dance</p>
         <p>An interesting example of historic misinformation, English explorers in the 1960s believed to have discovered a new dance style characterized by "robotic", stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.</p>  
 
          <p>For more of my research, see my <a  href="" target="_blank">exotic dance research page.
-    1.	<dl>
-2.	<dt>soliloquy</dt>
-3.	<dd>In drama, where a character speaks to themselves, representing their inner thoughts or feelings and in the process relaying them to the audience (but not to other characters.)</dd>
-4.	<dt>monologue</dt>
-5.	<dd>In drama, where a character speaks their thoughts out loud to share them with the audience and any other characters present.</dd>
-6.	<dt>aside</dt>
-7.	<dd>In drama, where a character shares a comment only with the audience for humorous or dramatic effect. This is usually a feeling, thought or piece of additional background information</dd>
-8.	</dl>
-
+    
         </a>
 
         <p>Yours sincerely,</p>
