--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -35,8 +35,9 @@
         </style>
     </head>
     <body>
-        <address>
-        <p> <strong>Dr. Eleanor Gaye</strong><br>
+        <address class="sender-column">
+        <p> 
+        <strong>Dr. Eleanor Gaye</strong><br>
         Awesome Science faculty<br>
         University of Awesome<br>
         Bobtown, CA 99999,<br>
@@ -96,10 +97,6 @@ So please can you provide more information on each of these subjects, including 
         <h2>Exotic dance moves</h2>
 
         <p>Yes, you are right! As part of my post-doctorate work, I did study exotic tribal dances. To answer your question, my favourite dances are as follows, with definitions:</p>
-1.	<p>Here below is a blockquote...</p>
-2.	<blockquote cite="https://hipsum.com/">
-3.	<p> I'm baby pinterest flexitarian truffaut vaporware sustainable scenester forage. Tofu street art roof party, hexagon enamel pin direct trade viral leggings sartorial mumblecore austin. Cronut taiyaki XOXO mustache intelligentsia blog tumeric normcore offal tilde try-hard hoodie.</p>
-4.	</blockquote>
 
         <dl>
         <dt>Polynesian chicken dance</dt>
