--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -45,7 +45,7 @@
         <strong>Tel</strong>: 123-456-7890<br>
         <strong>Email</strong>: no_reply@example.com<br>
 
-        20 January 2016
+        <p>20 January 2016</p>
         </p>
         </address>    
          
