--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
                         <!-- Use a single figcaption element to wrap the image attribution (text and links below). -->
         <aside>
             <figure>
+                <img src= "images/puddle-1-medium.jpg" alt= "TEST!!!" style= "width:100%">
+                <figcaption>fig-1</figcaption>
+                     
                         <a href="https://www.flickr.com/photos/eosmaiajohanna/16418452630/">Puddle</a> by 
                         <a href="https://www.flickr.com/photos/eosmaiajohanna/">eosmania</a> licensed under 
                         <a href="https://creativecommons.org/licenses/by/2.0/legalcode">CC BY 2.0</a>
