--- a/index.html
+++ b/index.html
@@ -102,11 +102,12 @@
         <aside>
             <figure>
                 <img src= "images/puddle-1-medium.jpg" alt= "TEST!!!" style= "width:100%">
-                <figcaption>fig-1</figcaption>
+                <figcaption>fig-1
                      
                         <a href="https://www.flickr.com/photos/eosmaiajohanna/16418452630/">Puddle</a> by 
                         <a href="https://www.flickr.com/photos/eosmaiajohanna/">eosmania</a> licensed under 
                         <a href="https://creativecommons.org/licenses/by/2.0/legalcode">CC BY 2.0</a>
+                    </figcaption>
 </figure>  
                 <!-- FIGURE 2 -->
         
