--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <aside>
             <figure>
                 <img src="images/puddle-1-medium.jpg" alt="Patricia Frost" style="width:100%">
-                <figcaption>fig-1
+                <figcaption>
                      
                         <a href="https://www.flickr.com/photos/eosmaiajohanna/16418452630/">Puddle</a> by 
                         <a href="https://www.flickr.com/photos/eosmaiajohanna/">eosmania</a> licensed under 
