--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         
                         <!-- Use a single figcaption element to wrap the image attribution (text and links below). -->
         <aside>
-            <figure>
+            <figure class="fig-1">
                 <img src="images/puddle-1-medium.jpg" alt="Patricia Frost" style="width:100%">
                 <figcaption>
                      
