--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <!-- Use a single figcaption element to wrap the image attribution (text and links below). -->
         <aside>
             <figure>
-                <img src="images/puddle-1-medium.jpg" alt="Patricia Frost" style="width:100%">
+                <img class="fig-1" src="images/puddle-1-medium.jpg" alt="Patricia Frost" style="width:100%">
                 <figcaption>
                      
                         <a href="https://www.flickr.com/photos/eosmaiajohanna/16418452630/">Puddle</a> by 
