--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <!-- Using the text "C.E. Truffaut" create an email hyperlink for the email address "ce.truffaut@cwu.edu". --> 
         <footer>
             <p class="return">Back to top</p>
-            <p>&copy; 2020 C.E. Truffaut</p>
+            <p class="copyright">&copy; 2020 C.E. Truffaut</p>
         </footer>
     </body>
 </html>
