--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <article>
                     <h2>work ethic</h2>
                     <p>Live-edge direct trade kickstarter <strong>street</strong> art flannel meggings, letterpress wayfarers cardigan dreamcatcher bushwick kitsch franzen slow-carb. Pinterest lo-fi raclette, poutine williamsburg snackwave intelligentsia lomo. Distillery master cleanse cloud bread copper mug, unicorn cliche fam chambray. Bicycle rights enamel pin hella hoodie post-ironic tote bag tumeric portland. Microdosing VHS kickstarter art party coloring book health goth. Vape pitchfork activated charcoal dreamcatcher chambray.</p>
-        <object data="docs/waistcoat-satorial.pdf" type="application/pdf"
+        <object data="waistcoat-satorial.pdf" type="application/pdf"
                 <p><a href="docs/waistcoat-satorial.pdf">
                     </a></p>
             </object>
