--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -40,7 +40,7 @@
                 </colgroup>
                 <!-- The table head element should be the third child of the table element; it will wrap the code and content to define a row of column headers. -->    
                 <thead>
-                    <tr></tr>
+                    <tr>rowspan="4" colspan="2" scope="rowgroup">Terrestrial planets</tr>
                 </thead>
                 
                 <!-- The fourth child of the table element should be the table body element, which will contain the code and content to display rows of data. -->
