--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -18,7 +18,7 @@
         <main>
                 
             <!-- Add the table element. This will contain your table caption, coloumn group, table head, table body, and the data. -->
-            <table>
+            <table style"height:200px">
                 <!-- The caption element should be the first child of the table element, and wrap the following text and link.-->
                 <caption>    
                 Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
