--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -18,14 +18,14 @@
         <main>
                 
             <!-- Add the table element. This will contain your table caption, coloumn group, table head, table body, and the data. -->
-            <table style"height:200px">
+            <table style="width:100%">
                 <!-- The caption element should be the first child of the table element, and wrap the following text and link.-->
                 <caption>    
                 Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
                 </caption>
                 <!-- The second child of the table element should be the colgroup element, which also contains several col elements, and helps define the purpose of the table colums. -->
                 <colgroup>
-                    <col span="2">
+                    <col span="2" style="background-color:red">
                     <col style="background-color:yellow">
                     <col>
                     <col>
