--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -18,7 +18,7 @@
         <main>
                 
             <!-- Add the table element. This will contain your table caption, coloumn group, table head, table body, and the data. -->
-            <table style="width:100%">
+            <table>
                 <!-- The caption element should be the first child of the table element, and wrap the following text and link.-->
                 <caption>    
                 Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
@@ -45,8 +45,16 @@
                 
                 <!-- The fourth child of the table element should be the table body element, which will contain the code and content to display rows of data. -->
                 <tbody>
-                     <tr></tr>
-                     <tr></tr>
+                     <tr>
+                        <th>TEST1</th>
+                         <th>TEST2</th>
+                         <th>TEST3</th>
+                    </tr>
+                     <tr>
+                        <th>TEST4</th>
+                         <th>TEST5</th>
+                         <th>TEST6</th>
+                    </tr>
                      <tr></tr>
                      <tr></tr>
                      <tr></tr>
