--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -55,7 +55,13 @@
                          <th>TEST5</th>
                          <th>TEST6</th>
                     </tr>
-                     <tr></tr>
+                     <tr>
+                        <td>TEST10</td>
+                         <td>TEST11</td>
+                         <td>TEST12</td>
+                         <td>TEST13</td>
+                         <td>TEST14</td>
+                    </tr>
                      <tr></tr>
                      <tr></tr>
                      <tr></tr>
