--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -60,7 +60,8 @@
                          <td>TEST12</td>
                          <td>TEST13</td>
                          <td>TEST14</td>
-                           <td>rowspan="4" colspan="2" scope="rowgroup">Terrestial planets</td>
+                        <td>rowspan="4" colspan="2" scope="rowgroup">Terrestial planets</td>
+                         <td>rowspan="8" colspan="8" scope="rowgroup"Terrestial planets</td>
                     </tr>
                      <tr>
                          <th>TEST15</th>
