--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -100,7 +100,7 @@
                        <th rowspan="2">ROWSPAN2</th>
                     
                     </tr>
-                    
+                    <td colspan="2" rowspan="4" scope="rowgroup">COPIED</td>
                 </tbody>
             </table>
         </main>
