--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -58,7 +58,9 @@
                         <th>Notes</th>
                         <th>Image</th>
                     </tr>
-                    
+                    <tr>
+                        <td colspan="2" rowspan="4" scope="rowgroup"><strong>Terrestial planets</strong></td>
+                    </tr>
                      <!--
                     <tr>
                         <th>Blank</th>
