--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -60,6 +60,9 @@
                     </tr>
                     <tr>
                         <td colspan="2" rowspan="4" scope="rowgroup"><strong>Terrestial planets</strong></td>
+                        <td><strong>Mercury</strong></td> 
+                        <td>0.330</td>
+                        <td>4.879</td>
                     </tr>
                      <!--
                     <tr>
