--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -59,7 +59,7 @@
                         <th>Image</th>
                     </tr>
                     <tr>
-                        <td><strong>Terrestial planets</strong></td>
+                        <td colspan="2"><strong>Terrestial planets</strong></td>
                         <td><strong>Mercury</strong></td> 
                         <td>0.330</td>
                         <td>4.879</td>
