--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -45,7 +45,7 @@
                 <!-- The fourth child of the table element should be the table body element, which will contain the code and content to display rows of data. -->
                 <tbody>
                     <tr>
-                        <th colspan="2"></th>
+                        <th colspan="2" rowspan="4"></th>
                         <th>Name</th>
                         <th>Mass (10<sup>24</sup>kg)</th>
                         <th>Diameter (km)</th>
