--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -45,7 +45,7 @@
                 <!-- The fourth child of the table element should be the table body element, which will contain the code and content to display rows of data. -->
                 <tbody>
                     <tr>
-                        <th colspan="2" rowspan="4"></th>
+                        <th colspan="2"></th>
                         <th>Name</th>
                         <th>Mass (10<sup>24</sup>kg)</th>
                         <th>Diameter (km)</th>
@@ -63,6 +63,13 @@
                         <td><strong>Mercury</strong></td> 
                         <td>0.330</td>
                         <td>4.879</td>
+                        <td>5427</td>
+                        <td>3.7</td>
+                        <td>4222.6</td>
+                        <td>57.9</td>
+                        <td>167</td>
+                        <td>0</td>
+                        <td>Closest to the Sun</td>
                     </tr>
                      <!--
                     <tr>
