--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -70,6 +70,7 @@
                         <td>167</td>
                         <td>0</td>
                         <td>Closest to the Sun</td>
+                        <img class="mercury" src="planets-table/images/mercury.jpg" style="width:100%">
                     </tr>
                      <!--
                     <tr>
