--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -70,8 +70,9 @@
                         <td>167</td>
                         <td>0</td>
                         <td>Closest to the Sun</td>
-                        <img class="mercury" src="planets-table\images\mercury.jpg" style="width:100%">
-                    </tr>
+                        <figure>
+                            <img class="mercury" src="planets-table/images/mercury.jpg" style="width:100%">
+                        </figure>
                      <!--
                     <tr>
                         <th>Blank</th>
