--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -70,9 +70,9 @@
                         <td>167</td>
                         <td>0</td>
                         <td>Closest to the Sun</td>
-                        <figure>
+                        <td><figure>
                             <img class="mercury" src="planets-table/images/mercury.jpg" style="width:100%">
-                        </figure>
+                            </figure></td>
                      <!--
                     <tr>
                         <th>Blank</th>
