--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -70,9 +70,24 @@
                         <td>167</td>
                         <td>0</td>
                         <td>Closest to the Sun</td>
-                        <td><figure>
+                        <td>
+                        <figure>
                             <img class="mercury" src="planets-table/images/mercury.jpg" style="width:100%">
-                            </figure></td>
+                        </figure>
+                        </td>
+                    <tr>
+                        <td><strong>Mercury</strong></td> 
+                        <td>0.330</td>
+                        <td>4.879</td>
+                        <td>5427</td>
+                        <td>3.7</td>
+                        <td>4222.6</td>
+                        <td>57.9</td>
+                        <td>167</td>
+                        <td>0</td>
+                        <td>Closest to the Sun</td>
+                        <td>
+                    </tr>
                      <!--
                     <tr>
                         <th>Blank</th>
