--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -76,6 +76,84 @@
                         </figure>
                         </td>
                     <tr>
+                        <td><strong>Venus</strong></td> 
+                        <td>4.87</td>
+                        <td>12,104</td>
+                        <td>5243</td>
+                        <td>8.9</td>
+                        <td>2802.0</td>
+                        <td>108.2</td>
+                        <td>464</td>
+                        <td>0</td>
+                        <td></td>
+                        <td>
+                    </tr>
+                    <tr>
+                        <td><strong>Mercury</strong></td> 
+                        <td>0.330</td>
+                        <td>4.879</td>
+                        <td>5427</td>
+                        <td>3.7</td>
+                        <td>4222.6</td>
+                        <td>57.9</td>
+                        <td>167</td>
+                        <td>0</td>
+                        <td>Closest to the Sun</td>
+                        <td>
+                    </tr>
+                    <tr>
+                        <td><strong>Mercury</strong></td> 
+                        <td>0.330</td>
+                        <td>4.879</td>
+                        <td>5427</td>
+                        <td>3.7</td>
+                        <td>4222.6</td>
+                        <td>57.9</td>
+                        <td>167</td>
+                        <td>0</td>
+                        <td>Closest to the Sun</td>
+                        <td>
+                    </tr>
+                    <tr>
+                        <td><strong>Mercury</strong></td> 
+                        <td>0.330</td>
+                        <td>4.879</td>
+                        <td>5427</td>
+                        <td>3.7</td>
+                        <td>4222.6</td>
+                        <td>57.9</td>
+                        <td>167</td>
+                        <td>0</td>
+                        <td>Closest to the Sun</td>
+                        <td>
+                    </tr>
+                    <tr>
+                        <td><strong>Mercury</strong></td> 
+                        <td>0.330</td>
+                        <td>4.879</td>
+                        <td>5427</td>
+                        <td>3.7</td>
+                        <td>4222.6</td>
+                        <td>57.9</td>
+                        <td>167</td>
+                        <td>0</td>
+                        <td>Closest to the Sun</td>
+                        <td>
+                    </tr>
+                    <tr>
+                        <td><strong>Mercury</strong></td> 
+                        <td>0.330</td>
+                        <td>4.879</td>
+                        <td>5427</td>
+                        <td>3.7</td>
+                        <td>4222.6</td>
+                        <td>57.9</td>
+                        <td>167</td>
+                        <td>0</td>
+                        <td>Closest to the Sun</td>
+                        <td>
+                    </tr>
+                    <tr>
                         <td><strong>Mercury</strong></td> 
                         <td>0.330</td>
                         <td>4.879</td>
