--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -72,7 +72,7 @@
                         <td>Closest to the Sun</td>
                         <td>
                         <figure>
-                            <img class="mercury" src="planets-table/images/mercury.jpg" style="width:100%">
+                            <img class="mercury" src="planets-table/images/mercury.jpg" style="style:100%">
                         </figure>
                         </td>
                     <tr>
@@ -86,7 +86,6 @@
                         <td>464</td>
                         <td>0</td>
                         <td></td>
-                        <td>
                     </tr>
                     <tr>
                         <td><strong>Mercury</strong></td> 
@@ -99,7 +98,6 @@
                         <td>167</td>
                         <td>0</td>
                         <td>Closest to the Sun</td>
-                        <td>
                     </tr>
                     <tr>
                         <td><strong>Mercury</strong></td> 
