--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -72,7 +72,7 @@
                         <td>Closest to the Sun</td>
                         <td>
                         <figure>
-                            <img class="mercury" src="planets-table/images/mercury.jpg" style="width:100%">
+                            <img class="fig-1" src="planets-table/images/mercury.jpg" style="width:100%">
                         </figure>
                         </td>
                     <tr>
@@ -86,6 +86,11 @@
                         <td>464</td>
                         <td>0</td>
                         <td></td>
+                        <td>
+                        <figure>
+                            <img class="fig-2" src="planets-table/images/Venus.jpg" alt="subtitle" style="width:100%">
+                        </figure>
+                        </td>
                     </tr>
                     <tr>
                         <td><strong>Earth</strong></td> 
@@ -98,6 +103,11 @@
                         <td>15</td>
                         <td>1</td>
                         <td>Our world</td>
+                        <td>
+                        <figure>
+                            <img class="fig-3" src="planets-table/images/Earth.jpg" style="width:100%">
+                        </figure>
+                        </td>
                     </tr>
                     <tr>
                         <td><strong>Mars</strong></td> 
