--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -88,7 +88,7 @@
                         <td></td>
                         <td>
                         <figure>
-                            <img class="fig-2" src="planets-table/images/Venus.jpg" alt="subtitle" style="width:100%">
+                            <img class="fig-2" src="planets-table/images/Venus.jpg" style="width:100%">
                         </figure>
                         </td>
                     </tr>
