--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -88,7 +88,7 @@
                         <td></td>
                         <td>
                         <figure>
-                            <img class="fig-2" src="planets-table/images/Venus.jpg" style="width:100%">
+                            <img class="fig-2" src="planets-table/images/Venus.jpg" alt="subtitle" style="width:100%">
                         </figure>
                         </td>
                     </tr>
@@ -121,8 +121,30 @@
                         <td>2</td>
                         <td>The red planet</td>
                         <td>
+                        <td>
+                        <figure>
+                            <img class="fig-4" src="planets-table/images/Mars.jpg" style="width:100%">
+                        </figure>
+                        </td>
                     </tr>
-            
+                    <tr>
+                        <td rowspan="4"><strong>Jovian Planets</strong></td>
+                        <td rowspan="2"><strong>Gas giants</strong>
+                        <td><strong>Jupiter</strong></td> 
+                        <td>1898</td>
+                        <td>142,984</td>
+                        <td>1326</td>
+                        <td>23.1</td>
+                        <td>9.9</td>
+                        <td>778.6</td>
+                        <td>-110</td>
+                        <td>67</td>
+                        <td>The largest planet</td>
+                        <td>
+                        <figure>
+                            <img class="fig-5" src="planets-table/images/mercury.jpg" style="width:100%">
+                        </figure>
+                        </td>
                 </tbody>
             </table>
         </main>
