--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -145,6 +145,24 @@
                             <img class="fig-5" src="planets-table/images/mercury.jpg" style="width:100%">
                         </figure>
                         </td>
+                         <tr>
+                        <td><strong>Saturn</strong></td> 
+                        <td>568</td>
+                        <td>120,536</td>
+                        <td>687</td>
+                        <td>9.0</td>
+                        <td>10.7</td>
+                        <td>1433.5</td>
+                        <td>-140</td>
+                        <td>62</td>
+                        <td></td>
+                        <td>
+                        <figure>
+                            <img class="fig-6" src="planets-table/images/saturn.jpg" style="width:100%">
+                        </figure>
+                        </td>
+                    </tr>
+                        
                 </tbody>
             </table>
         </main>
