--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -25,7 +25,7 @@
                 </caption>
                 <!-- The second child of the table element should be the colgroup element, which also contains several col elements, and helps define the purpose of the table colums. -->
                 <colgroup>
-                    <col> 
+                    <col style="background-color: yellow"> 
                     <col> 
                     <col>
                     <col>
